--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-webcam": "^7.2.0",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
