--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
