--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^7.0.2",
